; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_astrstri.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_dstr.c_astrstri.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @astrstri(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %9, %2
  store i8* null, i8** %3, align 8
  br label %31

13:                                               ; preds = %9
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @strlen(i8* %14)
  store i64 %15, i64* %6, align 8
  br label %16

16:                                               ; preds = %25, %13
  %17 = load i8*, i8** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = call i64 @astrcmpi_n(i8* %17, i8* %18, i64 %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i8*, i8** %4, align 8
  store i8* %23, i8** %3, align 8
  br label %31

24:                                               ; preds = %16
  br label %25

25:                                               ; preds = %24
  %26 = load i8*, i8** %4, align 8
  %27 = getelementptr inbounds i8, i8* %26, i32 1
  store i8* %27, i8** %4, align 8
  %28 = load i8, i8* %26, align 1
  %29 = icmp ne i8 %28, 0
  br i1 %29, label %16, label %30

30:                                               ; preds = %25
  store i8* null, i8** %3, align 8
  br label %31

31:                                               ; preds = %30, %22, %12
  %32 = load i8*, i8** %3, align 8
  ret i8* %32
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @astrcmpi_n(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
